# winIDEAExampleWorkspaces

./: README.md
Ambiq/APOLLO512/emptyTargetInit/: APOLLO512_sfr.h  CPUFile.c  iC5000_SWD.xgrf  iC5000_SWD.xqrf
Ambiq/APOLLO512/targetInit/: APOLLO512.h  iC5000_SWD.xgrf  iC5000_SWD.xjrf  iC5000_SWD.xqrf  sample.ind  startup.c
AnalogDevices/ADuCM331/emptyTargetInit/: ADuCM331.h  ADuCM331_sfr.h  iC5000_SWD.xgrf  iC5000_SWD.xjrf  iC5000_SWD.xqrf
AnalogDevices/ADuCM331/targetInit/: CPUFile.c  iC5000_SWD.xgrf  iC5000_SWD.xqrf  sample.ind  startup.c
Atmel/ATSAMA5D3x/emptyTargetInit/: CPUFile.c  SampleiC5k.xgrf  SampleiC5k.xqrf  startup0.s
Atmel/ATSAMA5D3x/targetInit/: SAMA5D3x.h  SAMA5D3x_sfr.h  SampleiC5k.xgrf  startup.c  (+4 more)
NXP/MPC5746R_eTPU/: SampleiC6k_MPC5746R.xgrf  SampleiC6k_MPC5746R.xjrf  SampleiC6k_MPC5746R.xqrf  SampleiC6k_MPC5746R_eTPU1.xgrf  SampleiC6k_MPC5746R_eTPU1.xjrf  SampleiC6k_MPC5746R_eTPU1.xqrf  mpc5746r_sfr.h  readMe.txt
NXP/NXP_IMXRT1020/: CPUFile.c  iC5000_SWD.xgrf  iC5000_SWD.xjrf  iC5000_SWD.xqrf  imxrt1020_sfr.h  sample_itcm_dtcm_ram.ind  startup.c
ST/ASMBasicQEMU_CMAKE/: ASMBasicQEMU.xjrf  ASMBasicQEMU.xqrf  CMakeLists.txt  README.md  example.s
ST/ASMBeforeMainQEMU_GCC_CMAKE/: ASMBeforeMainQEMU.xgrf  README.md  mySomeImpl.s
ST/BeforeMainQEMU_GCC_CMAKE/: CMakeLists.txt  README.md
ST/RustSampleQEMU_CARGO/: Cargo.toml  README.md  build.bat  sample.xgrf  sample.xjrf  sample.xqrf
ST/STM32F303_ASMBasicQEMU_CMAKE/: ASMBasicQEMU.info.json  ASMBasicQEMU.xgrf
ST/STM32F303_ASMBeforeMainQEMU_GCC_CMAKE/: ASMBeforeMainQEMU.xjrf  ASMBeforeMainQEMU.xqrf  CMakeLists.txt  main.c  startup.s
ST/STM32F303_BeforeMainQEMU_GCC_CMAKE/: BeforeMainQEMU.info.json  BeforeMainQEMU.xgrf  BeforeMainQEMU.xjrf  BeforeMainQEMU.xqrf  STM32F303K8.ind  main.c
ST/STM32F303_RustSampleQEMU_CARGO/: sample.info.json  sample.xgrf  sample.xjrf
ST/STM32H7B3_FreeRTOS_QEMU/: FreeRTOSConfig.h  FreeRTOSProfiler.xml  GDB_STM32H7xx_FreeRTOS.xgrf  GDB_STM32H7xx_FreeRTOS.xjrf  GDB_STM32H7xx_FreeRTOS.xqrf  iSYSTEM_instrumentation.h  iSYSTEM_sfr.h  sample.ind  startup_stm32h7b3lihxq.s  stm32.c  stm32.h
ST/STM32H7B3_FreeRTOS_QEMU_GCC_CMAKE/: CMakeLists.txt  GDB_STM32H7xx_FreeRTOS.info.json  GDB_STM32H7xx_FreeRTOS.xgrf  GDB_STM32H7xx_FreeRTOS.xjrf  GDB_STM32H7xx_FreeRTOS.xqrf  README.md  iSYSTEM_instrumentation.h  sample.ind  stm32.c
ST/STM32H7B3_FreeRTOS_QEMU_GCC_CMAKE/CMSIS/Include/: cmsis_iccarm.h  deprecated_definitions.h  portmacro.h  timers.h
ST/STM32H7B3_FreeRTOS_QEMU_GCC_CMAKE/Debug/: output.elf
ST/STM32H7B3_FreeRTOS_QEMU_GCC_CMAKE/Source/: main.c  sysmem.c
SiFive/E31_QEMU_virt/BeforeMain_GCC_CMAKE/: BeforeMainQEMU.xgrf  BeforeMainQEMU.xjrf  BeforeMainQEMU.xqrf  CMakeLists.txt  README.md  main.c  mySomeImpl.c  sample.lds  startup.s
SiFive/E31_QEMU_virt/BeforeMain_GCC_CMAKE/Debug/: BeforeMain.out
SiFive/E31_QEMU_virt/FreeRTOS_GCC_CMAKE/: CMakeLists.txt  FreeRTOSQEMU.info.json  FreeRTOSQEMU.xgrf  FreeRTOSQEMU.xjrf  FreeRTOSQEMU.xqrf  README.md
SiFive/E31_QEMU_virt/FreeRTOS_GCC_CMAKE/Debug/: FreeRTOS.out
SiFive/E31_QEMU_virt/FreeRTOS_GCC_CMAKE/FreeRTOS/Demo/RISC-V-Qemu-virt_GCC/: FreeRTOSConfig.h  printf-stdarg.c
qemu_examples/: CMakeLists.txt  LICENSE  README.md
qemu_examples/Common/: CMakeLists.txt  main.c  main.h  test.c  test.h
qemu_examples/TriCore/: CMakeLists.txt  CMakePresets.json  TriCore.cmake  TriCore_QEMU.info.json  TriCore_QEMU.xgrf  TriCore_QEMU.xjrf  TriCore_QEMU.xqrf  TriCore_sample.xgrf  TriCore_sample.xjrf  build.bat  manual_build.bat  sample.lsl  test.h
qemu_examples/TriCore/Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  sample.elf  sample.mdf
qemu_examples/TriCore/Debug/Common/: cmake_install.cmake
qemu_examples/TriCore/TriBoard-TC1796/HelloSerInt/: HelloSerInt.cbp
qemu_examples/TriCore/TriBoard-TC1796/HelloSerInt/h/: rs232.h
qemu_examples/TriCore/TriBoard-TC1796/HelloSerInt/src/: hello.c
qemu_examples/TriCore/TriBoard-TC1796/HelloSerial/: HelloSerial.cbp
qemu_examples/TriCore/TriBoard-TC1796/HelloSerial/h/: rs232.h
qemu_examples/TriCore/TriBoard-TC1796/HelloSerial/src/: hello.c
qemu_examples/TriCore/TriBoard-TC1796/HelloVIO/: HelloVIO.cbp
qemu_examples/TriCore/TriBoard-TC1796/HelloVIO/src/: hello.c
qemu_examples/TriCore/TriBoard-TC1796/pxample/: pxample.cbp
qemu_examples/TriCore/TriBoard-TC1796/pxample/h/: clock.h  itc.h  ledserver.h  pxtrap.h  rs232.h  stdinit.h  stdtask.h  task.h  termio.h  timer.h  tty.h  ttytask.h
qemu_examples/TriCore/TriBoard-TC1796/pxample/objPXMON/: makefile
qemu_examples/TriCore/TriBoard-TC1796/pxample/objPXVIEW/: makefile
qemu_examples/TriCore/TriBoard-TC1796/pxample/src/: clock.c  ledserver.c  pxample.c  stdinit.c  stdtask.c  task1.c  task2.c  task3.c  tty.c
qemu_examples/TriCore/workspace/.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
qemu_examples/aarch64/: CMakeLists.txt  Hello_aarch64!.xgrf  Hello_aarch64!.xjrf  Hello_aarch64!.xqrf  QEMU.bat  aarch64.cmake  aarch64.ld  aarch64_QEMU.info.json  aarch64_QEMU.xgrf  aarch64_QEMU.xjrf  aarch64_QEMU.xqrf  manual_build.bat  stacksetup.s  startup.c  syscalls.c  trace-22948
qemu_examples/aarch64/Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  aarch64.map  build.ninja  cmake_install.cmake  sample.elf
qemu_examples/riscv32/: CMakeLists.txt  QEMU.bat  build.bat  enable_fpu.s  link.ld  manual_build.bat  readMe.txt  riscv32.cmake  riscv32.xgrf  riscv32.xjrf  riscv32.xqrf  riscv32_QEMU.info.json  riscv32_QEMU.xgrf  riscv32_QEMU.xjrf  riscv32_QEMU.xqrf  startup.c  trace-18204
qemu_examples/riscv32/Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  sample.elf  sample.map
qemu_examples/riscv32/Debug/Common/: cmake_install.cmake
qemu_examples/riscv64/: CMakeLists.txt  QEMU.bat  link.ld  riscv64.cmake  riscv64.xgrf  riscv64.xjrf  riscv64.xqrf  riscv64_QEMU.info.json  riscv64_QEMU.xgrf  riscv64_QEMU.xjrf  riscv64_QEMU.xqrf  startup.c
qemu_examples/riscv64/Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  sample.elf  sample.map
(+7959 files in other folders)
